[package]
name = "starfix"
version = "0.1.3"
edition = "2024"

[dependencies]
arrow = { version = "57.0.0", features = ["ffi"] }
arrow-digest = "56.0.0"
arrow-schema = { version = "57.0.0", features = ["serde"] }
digest = "0.10.7"
hex = "0.4.3"
postcard = "1.1.3"
pretty_assertions = "1.4.1"
serde = "1.0.228"
serde_json = "1.0"
sha2 = "0.10.9"
# automated CFFI + bindings in other languages
uniffi = { version = "0.29.4", features = ["cli", "tokio"] }

[[bin]]
name = "uniffi-bindgen"

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }


[lib]
crate-type = ["rlib", "cdylib"]

[package.metadata.release]
publish = false
